# booster_mjlab

./: .gitignore  .justfile  README.md  pyproject.toml  shell.nix
scripts/: mp4_to_gif.sh
src/k1_mjlab/robots/: __init__.py
src/k1_mjlab/robots/booster_k1/: k1_constants.py
src/k1_mjlab/robots/booster_k1/xmls/: k1.xml
src/k1_mjlab/robots/booster_t1/: t1_constants.py
src/k1_mjlab/robots/booster_t1/xmls/: t1.xml
src/k1_mjlab/tasks/: env_cfgs.py  rl_cfg.py
src/k1_mjlab/tasks/velocity/config/k1/: __init__.py  env_cfgs.py  rl_cfg.py
