[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "k1_mjlab"
version = "0.1.0"
description = "Mjlab tasks for the Booster K1."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "mjlab>=1.2.0",
  "viser>=1.0.16",
  "wandb>=0.23.1",
  "torch",
  "torchaudio",
  "torchvision",
  "triton",
]

[project.entry-points."mjlab.tasks"]
k1_mjlab = "k1_mjlab.tasks"

[dependency-groups]
dev = ["ipykernel", "ipywidgets", "pre-commit"]

[project.scripts]
k1_mjlab = "k1_mjlab:main"
k1_train = "k1_mjlab.scripts.train:main"
k1_record = "k1_mjlab.scripts.record:main"
k1_play = "k1_mjlab.scripts.play:main"
k1_list_envs = "k1_mjlab.scripts.list_envs:main"

[tool.uv]
environments = ["sys_platform == 'linux' or sys_platform == 'win32'"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
